# yandex-tracker-better-search

./: ..env  .env.example  .gitignore  README.md  cert.pem  docker-compose.yml  go.mod  go.sum  key.pem  main.go  pyproject.toml
indexer/: indexer.go
scripts/: generate_cert.py
server/: handlers.go  server.go
server/templates/: index.html  logs.html  results.html  status.html
sync/: manager.go
tracker/: client.go  fetch.go  sync.go  types.go
yandex_tracker_better_search/: main.py
yandex_tracker_better_search/api/: auth.py  search.py  tasks.py
yandex_tracker_better_search/backend/: server.py
yandex_tracker_better_search/frontend/: index.html
yandex_tracker_better_search/frontend/components/: footer.html  header.html
